samples/_failures_safe/1761432974_b7cfc6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb66ff4f.c: In function ‘main’:
./samples/SAFE/__tmp_cb66ff4f.c:142:24: error: expected ‘)’ at end of input
  142 |     addEdge(graph, 0, 2
      |            ~           ^
      |                        )
./samples/SAFE/__tmp_cb66ff4f.c:142:5: error: too few arguments to function ‘addEdge’
  142 |     addEdge(graph, 0, 2
      |     ^~~~~~~
./samples/SAFE/__tmp_cb66ff4f.c:45:5: note: declared here
   45 | int addEdge(struct Graph* graph, int src, int dest, int weight) {
      |     ^~~~~~~
./samples/SAFE/__tmp_cb66ff4f.c:142:5: error: expected declaration or statement at end of input
  142 |     addEdge(graph, 0, 2
      |     ^~~~~~~
